@@ -7,6 +7,7 @@ sensord (0.7.0) unstable; urgency=low
   * Removed hardcoded metadata definitions from adaptors. This will now come from config file.
   * Renamed all configuration file entries.
   * Removed logic from Loader to handle deviceId based hierarchy. This is replaced by having different config file for each device type.
+  * New option added: --config-dir.
 
  -- Antti Virtanen <antti.i.virtanen@nokia.com>  Thu, 03 Feb 2011 18:46:11 +0200
 
